--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,84 @@
   border-bottom: 3px solid #ffc107;
   background-color: white !important;
 }
+
+.nav-item-custom {
+  color: black !important;
+  margin: 0 10px;
+  border-bottom: 3px solid transparent;
+  transition: all 0.3s ease;
+}
+
+.nav-item-custom:hover {
+  color: black !important;
+  border-bottom: 3px solid #ffcc00;
+}
+
+.active-nav {
+  border-bottom: 3px solid #ffcc00;
+}
+
+.btn-yellow {
+  background: linear-gradient(to right, black 0%, #ffcc00 0%);
+  background-size: 200% 100%;
+  background-position: left center;
+  color: black;
+  border: none;
+  padding: 8px 20px;
+  font-weight: 500;
+  transition: all 0.4s ease;
+  overflow: hidden;
+  position: relative;
+}
+
+.btn-yellow::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  transition: transform 0.4s ease;
+  transform: translateX(-100%);
+  z-index: 0;
+}
+
+.btn-yellow:hover::before {
+  transform: translateX(0);
+}
+
+.btn-yellow span {
+  position: relative;
+  z-index: 2;
+  transition: color 0.4s ease;
+}
+
+.btn-yellow:hover span {
+  color: white;
+}
+.carousel-caption {
+  bottom: 100px;
+}
+
+.custom-controls {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  display: flex;
+}
+
+.control-btn {
+  background: white;
+  border: none;
+  padding: 15px 20px;
+  cursor: pointer;
+}
+
+.control-btn-yellow {
+  background: #ffcc00;
+}
+
+.control-btn:hover {
+  opacity: 0.8;
+}
