--- a/src/Components/Home/ProductCard.css
+++ b/src/Components/Home/ProductCard.css
@@ -5,11 +5,12 @@
   overflow: hidden;
   cursor: pointer;
   transition: transform 0.3s ease;
+  background-color: white;
 }
 
-.icon-box img {
-  width: 1200px;
-  height: 120px;
+.iconn-box img {
+  width: 100%;
+  height: 100%;
   object-fit: contain;
 }
 
