--- a/src/Components/Home/ProductCard.css
+++ b/src/Components/Home/ProductCard.css
@@ -30,6 +30,7 @@
   padding: 15px;
   transform: translateY(100%);
   transition: transform 0.4s ease;
+  overflow-y: auto;
 }
 
 .product-card:hover .details-box {
