--- a/src/Components/Home/ProductCard.css
+++ b/src/Components/Home/ProductCard.css
@@ -33,8 +33,18 @@
   overflow-x: hidden;
   transform: translateY(100%);
   transition: transform 0.4s ease;
-  overflow-y: auto;
+  scroll-behavior: smooth;
+
+  /* Hide scrollbar for Chrome, Safari, Edge */
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
 }
+
+/* Chrome, Safari, and Opera */
+.details-box::-webkit-scrollbar {
+  display: none;
+}
+
 
 .product-card:hover .details-box {
   transform: translateY(0);
