--- a/src/Components/Home/WhyChooseUs.css
+++ b/src/Components/Home/WhyChooseUs.css
@@ -63,7 +63,7 @@
   bottom: 0;
   width: 100%;
   height: 10px;
-  background-color: #ffcc00;
+  background-color:yellow;
   transform: scaleX(0);
   transform-origin: left;
   transition: transform 0.9s ease-out;
@@ -102,7 +102,16 @@
 .why-item h5 .Icon {
   width: 30px;
   height: auto;
+  color: #ffcc00;
+
+
 }
+.Icon {
+  width: 2rem;
+  height: 2rem;
+  filter: brightness(0) saturate(100%) invert(80%) sepia(94%) saturate(747%) hue-rotate(6deg) brightness(102%) contrast(101%);
+}
+
 
 .why-item p {
   margin-left: 20px;
@@ -115,6 +124,7 @@
 .why-choose-section .Icon {
   width: 2rem !important;
   height: 2rem !important;
+  color: #ffcc00;
 }
 
 /* ===================================================
@@ -179,11 +189,13 @@
   }
   .why-choose-section .Icon {
  align-items: left;
+ color: #ffcc00;
 }
   .why-right {
     display: flex;
   text-align: start;
   justify-content: start;
   }
+  
 
 }
